// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should buy: buy_success 1`] = `
Object {
  "_accepted": "true",
  "events": Array [],
  "gas_remaining": "9640",
  "message": Object {
    "_amount": "0",
    "_recipient": "0x3333333333333333333333333333333333333333",
    "_tag": "transfer",
    "params": Array [
      Object {
        "type": "ByStr32",
        "value": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "vname": "node",
      },
      Object {
        "type": "ByStr20",
        "value": "0x2222222222222222222222222222222222222222",
        "vname": "owner",
      },
    ],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "10",
      "vname": "_balance",
    },
    Object {
      "type": "ByStr20",
      "value": "0x5555555555555555555555555555555555555555",
      "vname": "funderTmp",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
  ],
}
`;

exports[`should emit error event on transfer fail if not registry: onTransferFailure_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [
        Object {
          "type": "String",
          "value": "Bad _sender",
          "vname": "message",
        },
      ],
    },
  ],
  "gas_remaining": "9566",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "ByStr20",
      "value": "0x0000000000000000000000000000000000000000",
      "vname": "funderTmp",
    },
  ],
}
`;

exports[`should emit error event on transfer success if not registry: onTransferSuccess_failure 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [
        Object {
          "type": "String",
          "value": "Bad _sender",
          "vname": "message",
        },
      ],
    },
  ],
  "gas_remaining": "9566",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "ByStr20",
      "value": "0x0000000000000000000000000000000000000000",
      "vname": "funderTmp",
    },
  ],
}
`;

exports[`should fail to buy with incorrect price: buy_failure 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Error",
      "params": Array [
        Object {
          "type": "String",
          "value": "Bad _amount",
          "vname": "message",
        },
      ],
    },
  ],
  "gas_remaining": "9790",
  "message": null,
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "ByStr20",
      "value": "0x0000000000000000000000000000000000000000",
      "vname": "funderTmp",
    },
  ],
}
`;

exports[`should payout seller on transfer success: onTransferSuccess_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [
    Object {
      "_eventname": "Success",
      "params": Array [],
    },
  ],
  "gas_remaining": "9473",
  "message": Object {
    "_amount": "10",
    "_recipient": "0x1111111111111111111111111111111111111111",
    "_tag": "onEscrowSuccess",
    "params": Array [],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "True",
      },
      "vname": "sold",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "ByStr20",
      "value": "0x5555555555555555555555555555555555555555",
      "vname": "funderTmp",
    },
  ],
}
`;

exports[`should refund on transfer fail: onTransferFailure_success 1`] = `
Object {
  "_accepted": "false",
  "events": Array [],
  "gas_remaining": "9510",
  "message": Object {
    "_amount": "10",
    "_recipient": "0x5555555555555555555555555555555555555555",
    "_tag": "onEscrowFailure",
    "params": Array [],
  },
  "scilla_major_version": "0",
  "states": Array [
    Object {
      "type": "Uint128",
      "value": "0",
      "vname": "_balance",
    },
    Object {
      "type": "String",
      "value": "udc:escrow:1",
      "vname": "id",
    },
    Object {
      "type": "Bool",
      "value": Object {
        "argtypes": Array [],
        "arguments": Array [],
        "constructor": "False",
      },
      "vname": "sold",
    },
    Object {
      "type": "ByStr20",
      "value": "0x5555555555555555555555555555555555555555",
      "vname": "funderTmp",
    },
  ],
}
`;
